--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.9.0",
     "expo": "~39.0.2",
     "expo-asset": "~8.2.0",
+    "expo-calendar": "~8.5.0",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-linking": "^1.0.1",
@@ -37,7 +38,12 @@
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.13.0",
+    "eslint-config-universe": "^6.0.0",
     "jest-expo": "~39.0.0",
+    "prettier": "^2.1.2",
     "typescript": "~3.9.5"
   },
   "private": true
