--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-calendars": "^1.403.0",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-get-random-values": "^1.5.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12"
