feat: working crypto and psi

--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "base64-js": "^1.5.1",
     "expo": "~39.0.2",
     "expo-asset": "~8.2.0",
     "expo-calendar": "~8.5.0",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-linking": "^1.0.1",
+    "expo-notifications": "~0.7.2",
+    "expo-random": "~9.0.0",
+    "expo-secure-store": "~9.2.0",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "~8.5.0",
@@ -32,7 +36,6 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-calendars": "^1.403.0",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-get-random-values": "^1.5.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12"
