--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "expo-font": "~8.3.0",
     "expo-linking": "^1.0.1",
     "expo-notifications": "~0.7.2",
-    "expo-random": "~9.0.1",
+    "expo-random": "~9.0.0",
     "expo-secure-store": "~9.2.0",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "~8.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-calendars": "^1.403.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.7"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -48,9 +48,9 @@
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.13.0",
     "eslint-config-universe": "^6.0.0",
-    "jest-expo": "~39.0.0",
+    "jest-expo": "^39.0.0",
     "prettier": "^2.1.2",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.2"
   },
   "private": true
 }
