--- a/package.json
+++ b/package.json
@@ -12,44 +12,44 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.0",
+    "@expo/vector-icons": "^12.0.0",
     "@openmined/psi.js": "^0.3.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "base64-js": "^1.5.1",
-    "expo": "~39.0.2",
-    "expo-asset": "~8.2.0",
-    "expo-calendar": "~8.5.0",
-    "expo-constants": "~9.2.0",
-    "expo-font": "~8.3.0",
-    "expo-linking": "^1.0.1",
-    "expo-notifications": "~0.7.2",
-    "expo-random": "~9.0.0",
-    "expo-secure-store": "~9.2.0",
-    "expo-splash-screen": "~0.6.2",
-    "expo-status-bar": "~1.0.2",
-    "expo-web-browser": "~8.5.0",
+    "expo": "^40.0.0",
+    "expo-asset": "~8.2.1",
+    "expo-calendar": "~8.6.0",
+    "expo-constants": "~9.3.3",
+    "expo-font": "~8.4.0",
+    "expo-linking": "~2.0.0",
+    "expo-notifications": "~0.8.2",
+    "expo-random": "~10.0.0",
+    "expo-secure-store": "~9.3.0",
+    "expo-splash-screen": "~0.8.1",
+    "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "~8.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.7"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.13.0",
-    "eslint-config-universe": "^6.0.0",
-    "jest-expo": "^39.0.0",
-    "prettier": "^2.1.2",
-    "typescript": "~3.9.2"
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.15.0",
+    "eslint-config-universe": "^6.0.1",
+    "jest-expo": "^40.0.0",
+    "prettier": "^2.2.1",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
