--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "expo": "^40.0.0",
     "expo-asset": "~8.2.1",
     "expo-calendar": "~8.6.0",
+    "expo-clipboard": "~1.0.1",
     "expo-constants": "~9.3.3",
     "expo-font": "~8.4.0",
     "expo-linking": "~2.0.0",
+    "expo-mail-composer": "~9.0.0",
     "expo-notifications": "~0.8.2",
     "expo-random": "~10.0.0",
     "expo-secure-store": "~9.3.0",
